--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -926,92 +926,7 @@
 
 {% block extra_js %}
 
-    <script>
-        
-        document.addEventListener('DOMContentLoaded', function () {
-    var dropdowns = document.querySelectorAll('.socialmedia-dropdown');
+<script src="{% static 'js/socialmedia-dropdown.js' %}"></script>
+<script src="{% static 'js/mobile-dropdown.js' %}"></script>
 
-    dropdowns.forEach(function (dropdown) {
-        var toggle = dropdown.querySelector('.dropdown-toggle');
-        var menu = dropdown.querySelector('.dropdown-menu');
-
-        toggle.addEventListener('mouseenter', function () {
-            menu.style.display = 'block';
-            adjustDropdownPosition(menu);
-        });
-
-        dropdown.addEventListener('mouseleave', function () {
-            menu.style.display = 'none';
-        });
-
-        menu.addEventListener('mouseenter', function () {
-            menu.style.display = 'block';
-        });
-
-        menu.addEventListener('mouseleave', function () {
-            menu.style.display = 'none';
-        });
-    });
-
-    function adjustDropdownPosition(menu) {
-        var rect = menu.getBoundingClientRect();
-        var screenWidth = window.innerWidth;
-
-        menu.style.left = 'auto';
-        menu.style.right = 'auto';
-
-        if (rect.right > screenWidth) {
-            menu.style.left = 'auto';
-            menu.style.right = '0';
-        }
-
-        if (rect.left < 0) {
-            menu.style.left = '0';
-            menu.style.right = 'auto';
-        }
-
-        rect = menu.getBoundingClientRect();
-
-        if (rect.right > screenWidth) {
-            menu.style.left = 'auto';
-            menu.style.right = '0';
-        }
-        if (rect.left < 0) {
-            menu.style.left = '0';
-            menu.style.right = 'auto';
-        }
-    }
-
-    window.addEventListener('resize', function() {
-        var openMenus = document.querySelectorAll('.socialmedia-dropdown .dropdown-menu');
-        openMenus.forEach(function(menu) {
-            if (menu.style.display === 'block') {
-                adjustDropdownPosition(menu);
-            }
-        });
-    });
-});
-
-function toggleDropdown(element, event) {
-    event.preventDefault(); 
-    event.stopPropagation(); 
-    var dropdownContent = element.nextElementSibling;
-
-    console.log("Dropdown clicked:", element.textContent);
-
-    // Close all dropdowns
-    document.querySelectorAll('.dropdown-content-mobile').forEach(function(content) {
-        content.classList.remove('open');
-    });
-
-    dropdownContent.classList.toggle('open');
-}
-
-document.querySelectorAll('.dropdown-mobile > a').forEach(function(dropdownLink) {
-    dropdownLink.addEventListener('click', function(event) {
-        toggleDropdown(this, event);
-    });
-});
-
-    </script>
 {% endblock extra_js %}
