--- a/hub/migrations/templates/connect.html
+++ b/hub/migrations/templates/connect.html
@@ -171,62 +171,9 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        var modal = document.getElementById('chatModal');
 
-        var btn = document.querySelector('.chat-button');
+<script src="{% static 'js/chat-modal.js' %}"></script>
+<script src="{% static 'js/connect-underline.js' %}"></script>
 
-        var span = document.getElementsByClassName("close")[0];
-
-        function openModal() {
-            modal.style.display = "block";
-            modal.style.top = (window.pageYOffset + 200) + "px";
-        }
-
-        function closeModal() {
-            modal.style.display = "none";
-        }
-
-        btn.onclick = openModal;
-        span.onclick = closeModal;
-
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                closeModal();
-            }
-        }
-    });
-
-    document.addEventListener('DOMContentLoaded', function () {
-        var dropdown = document.querySelector('.dropdown-toggle');
-        var menu = document.querySelector('.dropdown-menu');
-
-        dropdown.addEventListener('click', function (event) {
-            menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
-            event.stopPropagation();
-        });
-
-        window.addEventListener('click', function () {
-            if (menu.style.display === 'block') {
-                menu.style.display = 'none';
-            }
-        });
-
-        var underline = document.querySelector('.curved-underline-animation');
-
-        var observer = new IntersectionObserver(function(entries) {
-            entries.forEach(function(entry) {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('animated');
-                }
-            });
-        }, {
-            threshold: 0.1
-        });
-
-        observer.observe(underline);
-    });
-</script>
 {% endblock extra_js %}
 
