--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1270,98 +1270,8 @@ html, body {
 {% endblock content %}
 
 {% block extra_js %}
-<script>
 
-document.addEventListener("DOMContentLoaded", function () {
-    let currentSlide = 0; // Start at the first slide (index 0)
-    const slidesContainer = document.querySelector('.slides-container');
-    const slides = document.querySelectorAll('.slide');
-    const totalSlides = slides.length;
-    let isAnimating = false;
+<script src="{% static 'js/chat-modal.js' %}"></script>
+<script src="{% static 'js/homepage-slideshow.js' %}"></script>
 
-    function showSlide(number) {
-        const slideWidth = slidesContainer.querySelector('.slide').offsetWidth;
-        slidesContainer.style.transform = `translateX(-${number * slideWidth}px)`;
-        console.log(`Showing slide ${number}`);
-    }
-
-    function changeSlide(step) {
-        if (isAnimating) return;
-        isAnimating = true;
-
-        currentSlide += step;
-        if (currentSlide >= totalSlides) {
-            currentSlide = 0;
-        } else if (currentSlide < 0) {
-            currentSlide = totalSlides - 1;
-        }
-        showSlide(currentSlide);
-        console.log(`Current Slide: ${currentSlide}`);
-
-        setTimeout(() => {
-            isAnimating = false;
-        }, 500); // Duration matches the CSS transition duration
-    }
-
-    document.querySelector('.prev').addEventListener('click', () => changeSlide(-1));
-    document.querySelector('.next').addEventListener('click', () => changeSlide(1));
-
-    // Initialize the slideshow to start at slide 0 (index 0)
-    showSlide(currentSlide);
-});
-
-
-
-
-
-
-
-
-
-document.addEventListener("DOMContentLoaded", function () {
-    var modal = document.getElementById('chatModal');
-
-    var btn = document.querySelector('.chat-button');
-
-    var span = document.getElementsByClassName("close")[0];
-
-    function openModal() {
-        modal.style.display = "block";
-        modal.style.top = (window.pageYOffset + 200) + "px";
-
-    }
-
-    function closeModal() {
-        modal.style.display = "none";
-    }
-
-    btn.onclick = openModal;
-
-    span.onclick = closeModal;
-
-    window.onclick = function (event) {
-        if (event.target == modal) {
-            closeModal();
-        }
-    }
-});
-
-
-
-document.addEventListener('DOMContentLoaded', function () {
-    var dropdown = document.querySelector('.dropdown-toggle');
-    var menu = document.querySelector('.dropdown-menu');
-
-    dropdown.addEventListener('click', function (event) {
-        menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
-        event.stopPropagation();
-    });
-
-    window.addEventListener('click', function () {
-        if (menu.style.display === 'block') {
-            menu.style.display = 'none';
-        }
-    });
-});
-</script>
 {% endblock extra_js %}
