--- a/hub/migrations/templates/logout.html
+++ b/hub/migrations/templates/logout.html
@@ -86,32 +86,8 @@
 {% endblock content %}
 
 {% block extra_js %}
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        var modal = document.getElementById('chatModal');
 
-        var btn = document.querySelector('.chat-button');
+<script src="{% static 'js/chat-modal.js' %}"></script>
 
-        var span = document.getElementsByClassName("close")[0];
-
-        function openModal() {
-            modal.style.display = "block";
-            modal.style.top = (window.pageYOffset + 200) + "px";
-        }
-
-        function closeModal() {
-            modal.style.display = "none";
-        }
-
-        btn.onclick = openModal;
-        span.onclick = closeModal;
-
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                closeModal();
-            }
-        }
-    });
-</script>
 {% endblock extra_js %}
 
